Modify English user guide html.

--- a/WebRoot/user-guide.html
+++ b/WebRoot/user-guide.html
@@ -28,26 +28,25 @@
 						<td>
 
 							<div id="item1mobile" class="mui-slider-item mui-control-content mui-active">
-								<p><span style="font-size: 60px;color: #fff; font-weight: normal;">Smart blood pressure measurement</span>&nbsp;&nbsp;&nbsp;
-									<span style="font-size: 20px;color: #fff; font-weight: normal;">（Products in kind prevail）</span>
+								<p><span style="font-size: 60px;color: #fff; font-weight: normal;">Blood pressure</span>&nbsp;&nbsp;&nbsp;
+									<span style="font-size: 20px;color: #fff; font-weight: normal;">（The image shown here is indicative only. The actual product may differ.）</span>
 								</p>
 								<div class="mui-slide-textarea" placeholder="Please enter the content you want to fill in" readonly>
-									<p>1.The tester sitting upright，Calm。</p>
-									<p>2.After put instrument on arm，Fixed above the elbow.1-2CM，Palm upward，Air duct is located inside。</p>
-									<p>3.Press“Standby/measure”，Time and blood pressure units。</p>
-									<p>4.Wait a second，The machine began to sound.，A numerical test is done on the TV and the display.。</p>
-									<p>5.Press“Standby/measure”Close blood pressure gauge，According to the“OK”Button to return to the main menu。</p>
+									<p>1.Sit up straight and relax.</p>
+									<p>2.Put cuff above elbow 1-2 CM.</p>
+									<p>3.Press “Standby/Measure” button to start.</p>
+									<p>4.The cuff will be inflated and results will displayed on TV.</p>
 								</div>
 							</div>
 							<div id="item2mobile" class="mui-slider-item mui-control-content" style="display: none;">
-								<p><span style="font-size: 60px;color: #fff; font-weight: normal;">Smart blood glucose measurement</span>&nbsp;&nbsp;&nbsp;
-									<span style="font-size: 20px;color: #fff; font-weight: normal;">（Products in kind prevail）</span>
+								<p><span style="font-size: 60px;color: #fff; font-weight: normal;">Blood Glucose</span>&nbsp;&nbsp;&nbsp;
+									<span style="font-size: 20px;color: #fff; font-weight: normal;">（The image shown here is indicative only. The actual product may differ.）</span>
 								</p>
 								<div class="mui-slide-textarea" placeholder="Please enter the content you want to fill in" readonly>
-									<p>1.Clean and dry hands。</p>
-									<p>2.Insert the test paper into the blood glucose meter。</p>
-									<p>3.Blood taking pen，After the test paper is filled with blood，Instruments enter into the countdown state，Numerical measurements on the display and TV。</p>
-									<p>4.Take out test paper of blood glucose meter，According to the“OK”Buttonto confirm，Return to main menu</p>
+									<p>1.After washing your hands, insert a test strip into your meter.</p>
+									<p>2.After washing your hands, insert a test strip into your meter. 2.Use your lancing device on the side of your fingertip to get a drop of blood. </p>
+									<p>3.Touch and hold the edge of the test strip to the drop of blood, and wait for the result.</p>
+									<p>4.Your blood glucose level will appear on the meter's display and TV.</p>
 								</div>
 							</div>
 						</td>
